--- a/app/assets/stylesheets/partials/_messagesBox.scss
+++ b/app/assets/stylesheets/partials/_messagesBox.scss
@@ -25,8 +25,12 @@
         float: right;
         background: #218CB9;
         color: #fff;
-        margin-bottom: 10px;
+        // margin-bottom: 10px;
       }
+    }
+
+    .message-box__item__contents {
+      margin-bottom: 10px;
     }
 
     &--read {
