--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,65 @@
  *= require_tree .
  *= require_self
  */
+
+ body {
+  /*text-align: center;*/
+  padding-top: 70px;
+  /*color: #364a4d;*/
+}
+
+h1 {
+  text-align: center;
+
+}
+
+ /* ボタン ================================ */
+.btn {
+  width: 100%;
+  padding: 8px 24px;
+  margin-top: 10px;
+  color: white;
+  display: inline-block;
+  opacity: 0.8;
+  border-radius: 3px;
+  border: 1px solid transparent;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+/* 「保存」ボタン */
+.primary-btn {
+  /*text-align: center;*/
+  background-color: #239b76;
+}
+
+.primary-btn:hover {
+  background-color: #28b086;
+}
+
+/* フォーム================================ */
+/*input, textarea, select {
+  border: 1px solid #bbb;
+  margin-top: 5px;
+  margin-bottom: 25px;
+  border-radius: 3px;
+}*/
+
+.wrapper {
+  width: 40%;
+  margin: auto;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  padding: 6px 12px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  font-size: 16px;
+  line-height: 1.428571429;
+  color: #555555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+}
