add log in page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,11 +1,12 @@
 !!! 5
 %html
   %head
-    %title flux_tutorial
+    %title ChatApplication
     %link{ href: '//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css', rel: 'stylesheet' }/
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'application'
+    = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = javascript_include_tag '/assets/javascripts/boot.js'
+    = javascript_include_tag 'application'
     = csrf_meta_tags
   %body
     = yield
