--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,7 +26,7 @@
       %p.alert.alert-success= notice
       %p.alert.alert-danger= alert
       = yield
-    .container
-      %footer.footer
-        .small
-          &copy; C.N.
+    -# .container
+    -#   %footer.footer
+    -#     .small
+    -#       &copy; C.N.
