--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="wrapper">
 
-<h1>ユーザー情報の変更</h1>
+<h1>プロフィール編集</h1>
   <!-- Edit <%= resource_name.to_s.humanize %> -->
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -30,15 +30,20 @@
     <%= f.password_field :current_password, autocomplete: "off", class: "form-control" %>
   </div>
 
+  <div class="field">
+    <%= f.label "プロフィール画像" %>
+    <%= f.file_field :image, class: "form-control image-field" %>
+  </div>
+
   <div class="actions">
     <%= f.submit "更新", class: "btn primary-btn" %>
   </div>
 <% end %>
 
-</div>
-
 <h3>退会する</h3>
 
 <p><%= button_to "退会", registration_path(resource_name), data: { confirm: "本当にアカウントを消去していいですか？" }, method: :delete %></p>
 
-<%= link_to "Back", :back %>
+<!-- <%= link_to "Back", :back %> -->
+
+</div>
