--- a/app/assets/stylesheets/components/_replyBox.scss
+++ b/app/assets/stylesheets/components/_replyBox.scss
@@ -15,6 +15,10 @@
     &:focus + .reply-box__tip {
       display: block;
     }
+
+    // &__search {
+    //   width: 50%;
+    // }
   }
 
   &__tip {
