--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,7 +14,7 @@
         #logo= link_to "Chat App", root_path
         - if user_signed_in?
           %ul.header-right
-            %li= link_to "ユーザー検索", users_path
+            %li= link_to "ユーザー検索", users_path, data: {no_turbolink: true}
             %li= link_to "マイページ", current_user
             %li= link_to "チャット", messages_path, data: {no_turbolink: true}
             %li= link_to "ログアウト", destroy_user_session_path, method: :delete
