--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,6 +7,11 @@
   <%= devise_error_messages! %>
 
   <div class="field">
+    <%= f.label "新しい名前" %><br />
+    <%= f.text_field :name, autofocus: true, class: "form-control" %>
+  </div>
+
+  <div class="field">
     <%= f.label "新しいメールアドレス" %><br />
     <%= f.email_field :email, autofocus: true, class: "form-control" %>
   </div>
