--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -270,3 +270,14 @@ button:hover {
   float:left;
   cursor: pointer;
 }
+
+#delete-btn {
+  margin: 0 5px;
+  padding: 3px 9px;
+  font-size: 13px;
+  background-color: #ec5268;
+}
+
+#delete-btn:hover {
+  background-color: #ff5268;
+}
