--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -266,18 +266,34 @@ button:hover {
 }
 
 .search-list {
-  padding: 8px 60px;
+  padding: 8px 30px;
   float:left;
   cursor: pointer;
 }
 
 #delete-btn {
   margin: 0 5px;
-  padding: 3px 9px;
-  font-size: 13px;
+  padding: 2px 6px;
+  font-size: 11px;
   background-color: #ec5268;
 }
 
 #delete-btn:hover {
   background-color: #ff5268;
+}
+
+/*画像送信ボタン*/
+.submit_image {
+  margin-top: 5px;
+  opacity: 0.8;
+  border-radius: 3px;
+  border: 1px solid transparent;
+  font-size: 13px;
+  cursor: pointer;
+  color: white;
+  background-color: #239b76;
+}
+
+.submit_image:hover {
+  background-color: #28b086;
 }
