add a function to sort chatUsers

--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -1,7 +1,7 @@
-<h1>とりあえずユーザー登録しよ</h1>
-<h1><%= link_to "新規登録", new_user_registration_path %></h1>
-<h1><%= link_to "新規登録", new_user_registration_path %></h1>
-<h1><%= link_to "新規登録", new_user_registration_path %></h1>
-<h1><%= link_to "新規登録", new_user_registration_path %></h1>
-<h1><%= link_to "新規登録", new_user_registration_path %></h1>
-<h1><%= link_to "新規登録", new_user_registration_path %></h1>
+<div class="home-wrapper">
+  <div class="home">
+    <h2 class="title">世界中の人とチャットを始めませんか</h2>
+    <a><%= link_to "新規登録", new_user_registration_path, class: "regist-btn" %></a>
+  <!-- <p><%= button_to "新規登録", new_user_registration_path %></p> -->
+  </div>
+</div>
