--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -47,7 +47,7 @@
 
 <h3>退会する</h3>
 
-<p><%= button_to "退会", registration_path(resource_name), data: { confirm: "本当にアカウントを消去していいですか？" }, method: :delete %></p>
+<p><%= button_to "退会", registration_path(resource_name), data: { confirm: "本当にアカウントを消去していいですか？" }, method: :delete, id: "delete-user-btn"%></p>
 
 <!-- <%= link_to "Back", :back %> -->
 
