--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -298,7 +298,18 @@ button:hover {
   padding: 8px 30px;
   float:left;
   cursor: pointer;
+  text-decoration: none;
+  color: #3cb371;
+  font-size: 19px;
+  font-weight: bold;
 }
+
+.search-list:hover {
+  color: #3cb371;
+  cursor: default;
+  text-decoration: none;
+}
+
 
 #delete-btn {
   margin: 0 5px;
@@ -331,7 +342,7 @@ a.submit_image:hover {
 /*home画面*/
 .home {
   /*margin-top: 0;*/
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.2);
   height: 100%;
   text-align: center;
 }
