--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,8 +3,8 @@
   %head
     %title ChatApplication
     %link{ href: '//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css', rel: 'stylesheet' }/
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    = stylesheet_link_tag 'application', media: 'all'
+    = javascript_include_tag 'application'
     = javascript_include_tag '/assets/javascripts/boot.js'
     = javascript_include_tag 'application'
     = csrf_meta_tags
@@ -14,9 +14,9 @@
         #logo= link_to "Chat App", root_path
         - if user_signed_in?
           %ul.header-right
-            %li= link_to "ユーザー検索", users_path, data: {no_turbolink: true}
+            %li= link_to "ユーザー検索", users_path
             %li= link_to "マイページ", current_user
-            %li= link_to "チャット", messages_path, data: {no_turbolink: true}
+            %li= link_to "チャット", messages_path
             %li= link_to "ログアウト", destroy_user_session_path, method: :delete
         - else
           %ul.header-right
